Backed out changeset b8b4759b712f (bug 1451256) for bc failures on browser_876926_customize_mode_wrapping.js CLOSED TREE
UltraBlame original commit: 1ed7d32adedeec2b72849429339e3e045747f408

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -321,11 +321,6 @@ toolbarpaletteitem[place="palette"] {
   -moz-binding: url("chrome://global/content/bindings/toolbar.xml#toolbarpaletteitem-palette");
 }
 
-.toolbarpaletteitem-box {
-  
-  pointer-events: none;
-}
-
 
 
 menubar {
